# Game15

./: CMakeLists.txt  README.md  main.cpp  output.cpp  output.hpp  resource.qrc  solver.cpp  solver.hpp
Game15/: CMakeLists.txt  choose.cpp  choose.hpp  choose.ui  game15.cpp  game15.hpp  game15.ui  gameui.cpp  gameui.hpp  gameui.ui  main.cpp  menu.hpp  menu.ui
forms/: game.ui  gameui.ui
graphics/: CMakeLists.txt
graphics/forms/: acceptresult.ui  game.ui  menu.ui  statistics.ui
graphics/include/: acceptresult.hpp  game.hpp  menu.hpp  statistics.hpp
graphics/src/: acceptresult.cpp  game.cpp  menu.cpp  statistics.cpp
include/: game.hpp  gameui.hpp  solver.hpp
logic/: CMakeLists.txt
logic/include/: database.hpp  item.hpp  solver.hpp
logic/src/: database.cpp  solver.cpp
solver/: CMakeLists.txt
solver/include/: solver.hpp
solver/src/: item.cpp  solver.cpp
src/: game.cpp  gameui.cpp  menu.cpp  solver.cpp
tools/: build.sh  game.sh
